//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table SchoolYear {
  id String [pk]
  yearStart Int [not null]
  yearEnd Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  currentSchoolYear Boolean [not null, default: false]
  campus String [not null, default: 'EASTERN VISAYAS CAMPUS']
  materialEquipmentRequestControlNumberCounter Int [not null, default: 0]
  reagentRequestControlNumberCounter Int [not null, default: 0]
  laboratoryRequestControlNumberCounter Int [not null, default: 0]
  materialsAdded InventoryOfMaterials [not null]
  equipmentAdded InventoryOfEquipment [not null]
  reagentsAdded InventoryOfReagents [not null]
  laboratoryRequests LaboratoryRequests [not null]
  equipmentRequests EquipmentRequests [not null]
  materialRequests MaterialRequests [not null]
  reagentRequests ReagentRequests [not null]
  inventoryTransactions InventoryTransactions [not null]
}

Table Users {
  id String [pk]
  email String [not null]
  firstName String [not null]
  lastName String [not null]
  role Role [not null, default: 'STUDENT']
  imageLink String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  studentProfile Students
  teacherProfile Teachers
  adminProfile Admins
  studentsId String
  teachersId String
  adminsId String
  requests LaboratoryRequests [not null]
  changeRoleRequest ChangeRoleRequests [not null]
  notifications Notifications [not null]
}

Table Admins {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  signature String
  userProfile Users [not null]
  equipmentRequestsApproved LaboratoryRequests [not null]
  materialRequestsApproved LaboratoryRequests [not null]
  reagentRequestsApproved LaboratoryRequests [not null]
  laboratoryReservationsApproved LaboratoryRequests [not null]
  hidden Boolean [not null, default: false]
}

Table Teachers {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  signature String
  unit Units
  unitId String
  userProfile Users [not null]
  receivedLaboratoryRequests LaboratoryRequests [not null]
  hidden Boolean [not null, default: false]
}

Table Students {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  gradeSection GradeSection
  gradeSectionId String
  grade Int
  section String
  userProfile Users [not null]
  hidden Boolean [not null, default: false]
}

Table ChangeRoleRequests {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user Users [not null]
  userId String [not null]
  wantedRole Role [not null]
}

Table Notifications {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isRead Boolean [not null, default: false]
  user Users [not null]
  userId String [not null]
  message String [not null]
  redirect String
}

Table GradeSection {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  grade Int [not null]
  section String [not null]
  students Students [not null]
  laboratoryRequests LaboratoryRequests [not null]
  hidden Boolean [not null, default: false]
}

Table Units {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  frequencyRank Int [increment, unique, not null]
  teachers Teachers [not null]
  laboratoryRequests LaboratoryRequests [not null]
  hidden Boolean [not null, default: false]
}

Table Laboratories {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String
  colorCode String
  location LaboratoryLocations [not null]
  locationId String [not null]
  supplies InventoryOfMaterials [not null]
  equipment InventoryOfEquipment [not null]
  reagents InventoryOfReagents [not null]
  laboratoryReservations LaboratoryReservations [not null]
  hidden Boolean [not null, default: false]
}

Table LaboratoryLocations {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String
  laboratories Laboratories [not null]
  inventoryOfMaterials InventoryOfMaterials
  inventoryOfMaterialsSupplyId String
  inventoryOfEquipment InventoryOfEquipment
  equipmentId String
  inventoryOfReagents InventoryOfReagents
  reagentId String
  hidden Boolean [not null, default: false]
}

Table LaboratoryReservations {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  controlNumber String [not null]
  laboratoryReserved Laboratories [not null]
  laboratoryId String [not null]
  dates Json [not null]
  time Json [not null]
  laboratoryRequest LaboratoryRequests [not null]
  laboratoryRequestId String [not null]
}

Table InventoryOfMaterials {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  itemName String [not null]
  code String
  description String
  classification String
  unit String [not null]
  supplier String
  dateReceived DateTime
  quantity Int [not null, default: 1]
  currentlyInUse Int [not null, default: 0]
  additionalPurchase Int
  make String
  unitCost Float
  damage String
  balancePerCard Int
  balancePerCount Int
  inventoryTransactions InventoryTransactions [not null]
  location LaboratoryLocations [not null]
  laboratories Laboratories
  laboratoriesId String
  requests MaterialRequests [not null]
  schoolYear SchoolYear
  schoolYearId String
  available Boolean [not null, default: true]
  hidden Boolean [not null, default: false]
}

Table InventoryOfEquipment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  code String
  equipmentName String [not null]
  description String
  available Boolean [not null, default: true]
  serialNumber String
  modelNoOrManufacturer String
  quantity Int [default: 1]
  currentlyInUse Int [default: 0]
  unit String
  unitCost Float
  dateReceived DateTime
  propertyNumber String
  acquisitionType String
  supplier String
  status String
  inventoryTransactions InventoryTransactions [not null]
  location LaboratoryLocations [not null]
  laboratories Laboratories
  laboratoriesId String
  requests EquipmentRequests [not null]
  schoolYear SchoolYear
  schoolYearId String
  hidden Boolean [not null, default: false]
}

Table InventoryOfReagents {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  casNumber String
  code String
  chemicalName String [not null]
  description String
  classification String
  manufacturerName String
  supplier String
  available Boolean [not null, default: true]
  quantity Float
  reservedQuantity Float [default: 0]
  unit String
  DGClass String
  subRisk String
  PG String
  riskPhrase String
  safetyPhrase String
  hazSub Boolean
  poisonSchedule String
  currentSDS DateTime
  dateReceived DateTime
  expiryDate DateTime
  dateOpened DateTime
  status String
  location LaboratoryLocations [not null]
  laboratories Laboratories
  laboratoriesId String
  inventoryTransactions InventoryTransactions [not null]
  requests ReagentRequests [not null]
  schoolYear SchoolYear
  schoolYearId String
  hidden Boolean [not null, default: false]
}

Table InventoryTransactions {
  id String [pk]
  schoolYear SchoolYear
  schoolYearId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  transactionType String [not null]
  description String
  equipment InventoryOfEquipment
  equipmentId String
  material InventoryOfMaterials
  materialId String
  reagent InventoryOfReagents
  reagentId String
  quantityBeforeChange Float [not null]
  quantityAfterChange Float [not null]
  quantityOfChange Float [not null]
  units String
}

Table EquipmentRequests {
  id String [pk]
  controlNumber String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  quantity Int [not null]
  equipment InventoryOfEquipment [not null]
  name String [not null]
  description String
  modelNoOrManufacturer String
  laboratoryRequest LaboratoryRequests [not null]
  laboratoryRequestId String [not null]
  schoolYear SchoolYear
  schoolYearId String
}

Table MaterialRequests {
  id String [pk]
  controlNumber String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  quantity Int [not null]
  materials InventoryOfMaterials [not null]
  name String [not null]
  description String
  laboratoryRequest LaboratoryRequests [not null]
  laboratoryRequestId String [not null]
  schoolYear SchoolYear
  schoolYearId String
}

Table ReagentRequests {
  id String [pk]
  controlNumber String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  quantity Int [not null]
  unit String [not null]
  reagents InventoryOfReagents [not null]
  name String [not null]
  description String
  LaboratoryRequest LaboratoryRequests [not null]
  laboratoryRequestId String [not null]
  schoolYear SchoolYear
  schoolYearId String
}

Table LaboratoryRequests {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  requestor Users [not null]
  requestorId String [not null]
  forSubject String
  concurrentTopic String
  noOfStudents Int
  otherGroupMembers Json
  gradeSection GradeSection [not null]
  gradeSectionId String [not null]
  unit Units [not null]
  unitId String [not null]
  teacherInCharge Teachers [not null]
  teacherInChargeId String [not null]
  materialsRequested MaterialRequests [not null]
  equipmentRequested EquipmentRequests [not null]
  reagentsRequested ReagentRequests [not null]
  laboratoryReservations LaboratoryReservations [not null]
  independentTime Json [default: '{}']
  independentDates Json [default: '{}']
  independentLocation String [default: '']
  equipmentRequestsTeacherApproval SignedStatus [not null, default: 'PENDING']
  equipmentRequestsTeacherAnnotation String
  materialRequestsTeacherApproval SignedStatus [not null, default: 'PENDING']
  materialRequestsTeacherAnnotation String
  reagentRequestsTeacherApproval SignedStatus [not null, default: 'PENDING']
  reagentRequestsTeacherAnnotation String
  laboratoryReservationsTeacherApproval SignedStatus [not null, default: 'PENDING']
  laboratoryReservationsTeacherAnnotation String
  equipmentRequestsAdminApproval SignedStatus [not null, default: 'PENDING']
  equipmentRequestsAdminAnnotation String
  equipmentRequestsAdminApprover Admins
  equipmentRequestsAdminApproverId String
  materialRequestsAdminApproval SignedStatus [not null, default: 'PENDING']
  materialRequestsAdminAnnotation String
  materialRequestsAdminApprover Admins
  materialRequestsAdminApproverId String
  reagentRequestsAdminApproval SignedStatus [not null, default: 'PENDING']
  reagentRequestsAdminAnnotation String
  reagentRequestsAdminApprover Admins
  reagentRequestsAdminApproverId String
  laboratoryReservationsAdminApproval SignedStatus [not null, default: 'PENDING']
  laboratoryReservationsAdminAnnotation String
  laboratoryReservationsAdminApprover Admins
  laboratoryReservationsAdminApproverId String
  schoolYear SchoolYear
  schoolYearId String
  completeStatus CompleteStatus [not null, default: 'PENDING']
}

Table InventoryOfMaterialsToMaterialRequests {
  requestsId String [ref: > MaterialRequests.id]
  materialsId String [ref: > InventoryOfMaterials.id]
}

Table EquipmentRequestsToInventoryOfEquipment {
  requestsId String [ref: > EquipmentRequests.id]
  equipmentId String [ref: > InventoryOfEquipment.id]
}

Table InventoryOfReagentsToReagentRequests {
  requestsId String [ref: > ReagentRequests.id]
  reagentsId String [ref: > InventoryOfReagents.id]
}

Enum Role {
  STUDENT
  TEACHER
  ADMIN
}

Enum SignedStatus {
  APPROVED
  PENDING
  REVISION_NEEDED
}

Enum CompleteStatus {
  PENDING
  UNDERWAY
  COMPLETED
}

Ref: Users.studentsId > Students.id

Ref: Users.teachersId > Teachers.id

Ref: Users.adminsId > Admins.id

Ref: Teachers.unitId > Units.id

Ref: Students.gradeSectionId > GradeSection.id

Ref: ChangeRoleRequests.userId > Users.id

Ref: Notifications.userId > Users.id

Ref: Laboratories.locationId > LaboratoryLocations.id

Ref: LaboratoryLocations.inventoryOfMaterialsSupplyId > InventoryOfMaterials.id

Ref: LaboratoryLocations.equipmentId > InventoryOfEquipment.id

Ref: LaboratoryLocations.reagentId > InventoryOfReagents.id

Ref: LaboratoryReservations.laboratoryId > Laboratories.id

Ref: LaboratoryReservations.laboratoryRequestId > LaboratoryRequests.id [delete: Cascade]

Ref: InventoryOfMaterials.laboratoriesId > Laboratories.id

Ref: InventoryOfMaterials.schoolYearId > SchoolYear.id

Ref: InventoryOfEquipment.laboratoriesId > Laboratories.id

Ref: InventoryOfEquipment.schoolYearId > SchoolYear.id

Ref: InventoryOfReagents.laboratoriesId > Laboratories.id

Ref: InventoryOfReagents.schoolYearId > SchoolYear.id

Ref: InventoryTransactions.schoolYearId > SchoolYear.id

Ref: InventoryTransactions.equipmentId > InventoryOfEquipment.id

Ref: InventoryTransactions.materialId > InventoryOfMaterials.id

Ref: InventoryTransactions.reagentId > InventoryOfReagents.id

Ref: EquipmentRequests.laboratoryRequestId > LaboratoryRequests.id [delete: Cascade]

Ref: EquipmentRequests.schoolYearId > SchoolYear.id

Ref: MaterialRequests.laboratoryRequestId > LaboratoryRequests.id [delete: Cascade]

Ref: MaterialRequests.schoolYearId > SchoolYear.id

Ref: ReagentRequests.laboratoryRequestId > LaboratoryRequests.id [delete: Cascade]

Ref: ReagentRequests.schoolYearId > SchoolYear.id

Ref: LaboratoryRequests.requestorId > Users.id

Ref: LaboratoryRequests.gradeSectionId > GradeSection.id

Ref: LaboratoryRequests.unitId > Units.id

Ref: LaboratoryRequests.teacherInChargeId > Teachers.id

Ref: LaboratoryRequests.equipmentRequestsAdminApproverId > Admins.id

Ref: LaboratoryRequests.materialRequestsAdminApproverId > Admins.id

Ref: LaboratoryRequests.reagentRequestsAdminApproverId > Admins.id

Ref: LaboratoryRequests.laboratoryReservationsAdminApproverId > Admins.id

Ref: LaboratoryRequests.schoolYearId > SchoolYear.id